Javadoc for the pathfinder is ready.